Kubernetes AKS/kubernetes_network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-aspnetcorev2-network-policy-001
spec:
  podSelector:
    matchLabels:
      app: api-aspnetcorev2
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - ports:
    - port: 4225
    from:
    - podSelector:
        matchLabels: 
          role: network_monitoring
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.16/32
    ports:
      - protocol: TCP
        port: 5432
      - protocol: TCP
        port: 6379
